# fashion-mnist-fid

./: .gitignore  FashionMNIST-FID 评估方案.md  README.md  build_real_stats.py  evaluate_fashion_mnist_fid.py  fashion_mnist_fid.py  pyproject.toml  requirements.txt  train_fid_classifier.py
.github/workflows/: tests.yml
checkpoints/: README.md
docs/: metric-spec.zh-CN.md
models/: __init__.py  fashion_mnist_classifier.py
scripts/: build_fid_visualization.py
tests/: test_fashion_mnist_fid.py
